cleaned the code.
