# src/router/index.js
@@ -7,12 +7,14 @@ const controller=require('../controller/contorller')
 //all ftp related routes
 router.post('/fptConnection',controller.fptConnection)
 router.post('/ftpLists',controller.ftpLists)
-router.post('/downloadFile',controller.downloadFile)
+router.post('/downloadFileFromFtp',controller.downloadFileFromFtp)
+router.post('/backUpDataFromFtp',controller.backUpDataFromFtp)
+
 // router.post('/uploadFile',controller.uploadFile)
 
 //all local Destination apis
 router.get('/dirLists',controller.dirLists)
-
+router.post('/downloadFile',controller.downloadFile)
 //all mongoDb related routes
 router.post('/findByQuery',controller.findByQuery)
 router.post('/InsertMany',controller.InsertMany)
